--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,7 +1,17 @@
 TARGET=kernel.elf
-OBJS=main.o graphics.o font.o hankaku.o
+OBJS= \
+	main.o \
+	graphics.o \
+	font.o \
+	hankaku.o \
+	newlib_support.o
 
 CPPFLAGS+=-I../Include
+
+CFLAGS+= \
+	-O2 -Wall -g --target=x86_64-elf \
+	-ffreestanding \
+	-mno-red-zone
 CXXFLAGS+= \
 	-O2 -Wall -g --target=x86_64-elf \
 	-ffreestanding \
@@ -9,6 +19,7 @@ CXXFLAGS+= \
 	-fno-exceptions \
 	-fno-rtti \
 	-std=c++17
+
 LDFLAGS+= --entry KernelMain -z norelro --image-base=0x100000 --static
 
 .PHONY: all
@@ -16,10 +27,13 @@ all: ${TARGET}
 
 
 ${TARGET}: ${OBJS}
-	ld.lld ${LDFLAGS} -o $@ $^
+	ld.lld ${LDFLAGS} -o $@ $^ -lc
 
 %.o: %.cpp
 	clang++ ${CPPFLAGS} ${CXXFLAGS} -c $<
+
+%.o: %.c
+	clang ${CPPFLAGS} ${CFLAGS} -c $<
 
 
 hankaku.bin: hankaku.txt
