--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,9 @@
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
+	"containerEnv": {
+		"MIKANOS_OVERRIDE": "container${containerEnv:MIKANOS_TEST}"
+	},
 
 	"runArgs": [
 		"--privileged"
