--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"containerEnv": {
-		"MIKANOS_OVERRIDE": "container${containerEnv:MIKANOS_TEST}"
+		"QEMU_OPTS": "-vnc :0"
 	},
 
 	"runArgs": [
