--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -12,6 +12,8 @@ OBJS= \
 	logger.o \
 	mouse.o \
 	interrupt.o \
+	segment.o \
+	paging.o \
 	usb/memory.o \
 	usb/device.o \
 	usb/classdriver/base.o \
