--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 /mnt
 /*.img
 /Build
-.*
+
 *.o
 *.elf
 *.bin
+
+/.vscode/**
+!/.vscode/launch.json
+!/.vscode/c_cpp_properties.json
+
+/edk2/**/.*
