--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,5 +3,5 @@ ARG VARIANT=latest
 FROM ghcr.io/sarisia/mikanos:${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-here>
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends gdb
