--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "(gdb) Attach to QEMU",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/src/kernel/kernel.elf",
