--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ms-vscode.cpptools",
-		"13xforever.language-x86-64-assembly"
+		"13xforever.language-x86-64-assembly",
+		"ms-vscode.hexeditor"
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
